# scene-memory-transformer

./: .gitignore  Pipfile  README.md  main.py  pyproject.toml
memory/: blocks.py  memory.py  policy.py
smt/: __init__.py  policy.py  transformer.py
tests/: test_blocks.py  test_memory.py  test_policy.py  test_policy_train_atari.py  test_policy_train_cartpole.py  test_transformer.py
